# EKF_compensation

./: .env  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
config/: app_config.py
data/: data.py  data_management.py  test_data.csv
ekf_kosdi_core/: complementary_filter.py  ekf.py
geomag/: __init__.py  geomag.py
utils/: plot_management.py  rotations.py
